@@ -391,6 +391,9 @@ void BX_CPU_C::register_state(void)
   if (BX_CPUID_SUPPORT_ISA_EXTENSION(BX_ISA_XSAVES)) {
     BXRS_HEX_PARAM_FIELD(MSR, msr_xss, msr.msr_xss);
   }
+  if (BX_CPUID_SUPPORT_ISA_EXTENSION(BX_ISA_SCA_MITIGATIONS)) {
+    BXRS_HEX_PARAM_FIELD(MSR, ia32_spec_ctrl, msr.ia32_spec_ctrl);
+  }
 #endif
 #if BX_CONFIGURE_MSRS
   bx_list_c *MSRS = new bx_list_c(cpu, "USER_MSR");
@@ -838,6 +841,8 @@ void BX_CPU_C::reset(unsigned source)
 #endif
   BX_CPU_THIS_PTR msr.msr_xss = 0;
 #endif // BX_CPU_LEVEL >= 6
+
+  BX_CPU_THIS_PTR msr.ia32_spec_ctrl = 0;
 
 /* initialise MSR registers to defaults */
 #if BX_CPU_LEVEL >= 5
